--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
+    "g": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
-    "ts-jwt": "^8.5.6"
+    "ts-jwt": "^8.5.6",
+    "ts-node": "^10.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
