--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
-    "g": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
-    "ts-jwt": "^8.5.6",
+    "multer": "^1.4.5-lts.1",
     "ts-node": "^10.8.1"
   },
   "devDependencies": {
@@ -30,6 +29,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.42",
     "concurrently": "^7.2.1",
     "nodemon": "^2.0.16",
