--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
