--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "eslint-config-react-app": "6",
+    "eslint-config-react-app": "^7.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "react": "^18.1.0",
