--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "mongoose": "^6.3.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "ts-node": "^10.8.1"
+    "stripe": "^10.11.0",
+    "ts-node": "^10.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
