--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL = 'http://localhost:8000/api/'
 REACT_APP_URL = 'http://localhost:8000'
+REACT_APP_MAP_API_KEY = 'AIzaSyDzHZBwPFD5-ZflI-mMqcj2RCKp5mCAWeM'
