--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "eslint-config-react-app": "^7.0.1",
+    "google-map-react": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.9.2",
     "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-geolocated": "^4.0.3",
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.1.0",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
