--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,34 @@
-version: "3.7"
+version: "3.9"
+
 services:
-  api:
-    depends_on:
-      - mongodb
-    build: ./server
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./server:/app-server
-      - /app-server/node_modules
-
-  ui:
-    depends_on:
-      - api
-    build: ./client
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./client:/app-client
-      - /app-client/node_modules
-    tty: true
-
   mongodb:
-    image: mongo:5.0.2
-    restart: unless-stopped
+    image: mongo
+    container_name: mongodb
+    restart: always
     ports:
       - "27017:27017"
+    volumes:
+      - ./data:/data/db
+
+  server:
+    build: ./server
+    container_name: server
+    restart: always
+    ports:
+      - "3001:3001"
+    environment:
+      - NODE_ENV=production
+      - MONGO_URI=mongodb://mongodb:27017/futsa
+    depends_on:
+      - mongodb
+
+  client:
+    build: ./client
+    container_name: client
+    restart: always
+    ports:
+      - "3000:3000"
+    environment:
+      - REACT_APP_API_URL=http://localhost:3001
+    depends_on:
+      - server
